[package]
name = "hyperscale-test-helpers"
version.workspace = true
edition.workspace = true
description = "Test helpers for Hyperscale - provides properly-signed fixtures for crypto testing"

[dependencies]
libp2p = { workspace = true, optional = true }
hyperscale-network = { workspace = true, optional = true }
hyperscale-types = { path = "../types", features = ["test-utils"] }

[features]
# Cluster fixtures (`fixtures::TestFixtures`) that derive libp2p Ed25519
# identities and a validator key map; off by default so test-helpers consumers
# that only need the BLS `TestCommittee` don't pull in libp2p.
fixtures = ["dep:libp2p", "dep:hyperscale-network"]

[lints]
workspace = true
